# MiniRysV3SwarmAPI

./: CMakeFiles.txt  CMakeLists.txt  README.md  WebSocketServer.cpp  WebSocketServer.h  api  api.cpp  api.h  communicator.cpp  communicator.h  echoServer.hpp  exceptions.h  main.cpp  robotstatus.h  wsclient.cpp  wsclient.h  wsserver.cpp  wsserver.h
include/: api.h  exceptions.h  robotaddresses.h  robotipaddress.h  robotsimswarmapibody.h  robotstatus.h  wifihandler.h
src/: CMakeLists.txt  api.cpp  wifihandler.cpp
