project(RobotSwarmAPI)
cmake_minimum_required(VERSION 2.8)
FIND_PACKAGE(OpenSSL)
add_definitions(-std=c++11 -lwebsockets -lopenssl)
set(LWS_LIB "/home/tgalecki/libwebsockets/build/lib/libwebsockets.a")
include_directories(.)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST} robotstatus.h)
target_link_libraries(${PROJECT_NAME} ${LWS_LIB})
